Add time slot slider

--- a/public/css/equity.css
+++ b/public/css/equity.css
@@ -20,3 +20,13 @@ svg {
   fill: none;
   stroke: red;
 }
+
+#slider-container {
+  margin-top: 10px;
+  height: 40px;
+  background-color: #eeeef5;
+}
+
+#range-label {
+  text-align: center;
+}
